--- a/src/App.css
+++ b/src/App.css
@@ -32,16 +32,17 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
 
- .set{
+.set {
   text-align: left;
- }
+}
 
- .round{
+.round {
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
@@ -49,15 +50,16 @@
   -o-border-radius: 20px;
 }
 
-.settext{
+.settext {
   position: fixed;
-  position:absolute;
-top: 20%;
-left: 43%;
+  position: absolute;
+  top: 20%;
+  left: 43%;
 }
-.opa{
-opacity: 0.5;
-margin-left: 6vh;
+
+.opa {
+  opacity: 0.5;
+  margin-left: 6vh;
 }
 
 ul li {
@@ -72,24 +74,27 @@ ul li {
   font-weight: 500;
   font-size: 15px;
 }
-.navStyle:hover{
-  color:rgb(135, 168, 78);
+
+.navStyle:hover {
+  color: rgb(135, 168, 78);
 }
 
-.align{
+.align {
   margin-top: 8px;
 }
-.floatleft{
+
+.floatleft {
   float: left;
   margin-left: 30px;
 }
 
-.floatright{
+.floatright {
   float: right;
-margin-right: 50px;
+  margin-right: 50px;
 }
 
- .font{
+.font {
   font-family: 'Abel', sans-serif;
   font-weight: 600;
- }
+  text-shadow: 0px 0px 10px black
+}
